add:photo and def get_context_data

--- a/django10:24/django_website2/website/templates/about.html
+++ b/django10:24/django_website2/website/templates/about.html
@@ -1,12 +1,6 @@
-{% load static %}
-<!doctype HTML>
-<html>
-    <head>
-        <link rel="stylesheet" href="{% static 'main.css'%}">
-    </head>
-    <body>
-        {% include "_navbar.html" %}
-        <h1>自己紹介</h1>
-        {% include "_footer.html" %}
-    </body>
-</html>
+{% extends "base.html" %}
+
+
+{% block main %}
+<h1>自己紹介</h1>
+{% endblock %}
