add:num_services,skills

--- a/django10:24/django_website2/website/templates/about.html
+++ b/django10:24/django_website2/website/templates/about.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
-
+{% load humanize %}
 
 {% block main %}
 <h1>自己紹介</h1>
+<h2>実績</h2>
+<p>これまでに〜{{num_services|intcomma}}</p>
+<h2>スキル</h2>
+<ul>
+    {% for skill in skills %}
+    <li>{{skill}}</li>
+    {% empty %}
+    スキルがありません
+    {% endfor %}
+</ul>
 {% endblock %}
