add:name change

--- a/django10:24/django_website2/website/templates/about.html
+++ b/django10:24/django_website2/website/templates/about.html
@@ -4,7 +4,7 @@
 {% block main %}
 <h1>自己紹介</h1>
 <h2>実績</h2>
-<p>これまでに〜{{num_services|intcomma}}</p>
+<p>{% now "Y年m月d日 H時i分" %}これまでに〜{{num_services|intcomma}}</p>
 <h2>スキル</h2>
 <ul>
     {% for skill in skills %}
